# comfyui-watdafox-nodes

./: .gitignore  LICENSE  README-ko.md  README.md  __init__.py  pyproject.toml
py/: loader_nodes.py  loader_nodes.py.txt  parameter_nodes.py  random_image_size.py  util_nodes.py  utils.py  watda_number.py
web/js/: event-listener.js
yaml/: model_resolutions.yaml
