[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-random-image-size"
version = "1.0.0"
authors = [
  { name="라이센스가뭔지모르는사람" },
]
description = "ComfyUI Random Image Size"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
