[build-system]
requires = [
  "setuptools>=70.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-watdafox-nodes"
version = "1.0.0"
authors = [
  { name = "", email = "" }
]
description = "A node pack for ComfyUI"
license = { text = "GNU General Public License v3" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
dependencies = [

]